--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -10,6 +10,7 @@
     align-items: center;
     height: 100vh;
     background-color: #f0f2f5;
+    gap: 20px;
 }
 
 .signup-form {
@@ -79,7 +80,6 @@
     padding: 2rem;
     border-radius: 8px;
     text-align: center;
-    margin-left: 2rem;
 }
 
 .show-off h2 {
@@ -100,6 +100,7 @@
 
 @media screen and (max-width: 488px) {
     .signup-container{
+        max-width: 100%;
         display: flex;
         flex-direction:column-reverse;
         justify-content: center;
@@ -107,9 +108,13 @@
         gap: 1rem;
     }
     .signup-form {
-        width: 300px;
+        max-width: fit-content;
     }
     .show-off{
-        margin-left: 0;
+        max-width: 80%;
+    }
+    5
+    ToastContainer{
+        max-width: 40%;
     }
 }
